Update MediaRecorder sample to include the latest API changes